YAML/service-example.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-odoo-hotel
  namespace: development
  labels:
    environment: development
    app: odoo-hotel
spec:
  selector:
    app: odoo-hotel
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8069
